--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.8.3",
     "mongoose": "^6.9.2",
     "puppeteer": "^19.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.14.0",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
