--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.9.2",
+    "pg": "^8.9.0",
     "puppeteer": "^19.7.1"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "@types/node": "^18.14.0",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
+    "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
