--- a/package.json
+++ b/package.json
@@ -1,45 +1,43 @@
 {
-  "name": "resume-builder-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "type": "commonjs",
-  "description": "backend service of resume-builder",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "nodemon index.ts"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/prasenjitpawar22/resume-builder-backend.git"
   },
-  "author": "prasenjitpawar22",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/prasenjitpawar22/resume-builder-backend/issues"
   },
   "homepage": "https://github.com/prasenjitpawar22/resume-builder-backend#readme",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "pg": "^8.9.0",
+    "nodemon": "^2.0.21",
     "puppeteer": "^19.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/config": "^3.3.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.14.0",
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20",
+    "@types/node": "^18.14.4",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
