--- a/example.env
+++ b/example.env
@@ -8,4 +8,5 @@ PRIVATE_KEY=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# mongodb e.g: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/prisma?retryWrites=true&w=majority
 DATABASE_URL= 
