--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "npx nodemon",
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js"
+
   },
   "repository": {
     "type": "git",
@@ -38,6 +41,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
     "prisma": "^4.11.0",
+    "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
