--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc && npm run build",
-    "start": "node index.js"
+    "start": "node build/index.js"
 
   },
   "repository": {
