--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "buildCommand": "rimraf ./build && tsc && npm run build",
     "builds": [
         {
-            "src": "index.ts",
+            "src": "build/index.js",
             "use": "@vercel/node" 
             
         }
