--- a/example.env
+++ b/example.env
@@ -10,3 +10,5 @@ PRIVATE_KEY=
 
 # mongodb e.g: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/prisma?retryWrites=true&w=majority
 DATABASE_URL= 
+
+CLERK_KEY =
