--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.21",
+    "pug": "^3.0.2",
     "puppeteer": "^19.7.1"
   },
   "devDependencies": {
