--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -32,7 +33,8 @@
     "lodash": "^4.17.21",
     "nodemon": "^2.0.21",
     "pug": "^3.0.2",
-    "puppeteer": "^19.7.1"
+    "puppeteer": "^19.7.1",
+    "puppeteer-core": "^19.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
