--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "lodash": "^4.17.21",
     "nodemon": "^2.0.21",
     "pug": "^3.0.2",
-    "puppeteer": "^19.7.1",
     "puppeteer-core": "^19.9.0"
   },
   "devDependencies": {
@@ -46,6 +45,7 @@
     "prisma": "^4.11.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "puppeteer": "^19.7.1"
   }
 }
