--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "prisma": "^4.11.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "puppeteer": "^19.7.1"
+    "typescript": "^4.9.5"
   }
 }
