--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
     "prisma": "^4.11.0",
+    "puppeteer": "^19.9.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
