--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.21",
-    "pug": "^3.0.2",
-    "puppeteer-core": "^19.9.0"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -43,7 +42,6 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
     "prisma": "^4.11.0",
-    "puppeteer": "^19.9.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
