--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "chrome-aws-lambda": "^8.0.2",
+    "chrome-aws-lambda": "6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -33,7 +33,7 @@
     "lodash": "^4.17.21",
     "nodemon": "^2.0.21",
     "pug": "^3.0.2",
-    "puppeteer-core": "^8.0.0"
+    "puppeteer-core": "6.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
