--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
+    "@types/puppeteer-core": "^7.0.4",
     "prisma": "^4.11.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
