--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
