--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "type": "git",
     "url": "git+https://github.com/prasenjitpawar22/resume-builder-backend.git"
   },
-  "engines": {
-    "node": "^14"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,8 +24,6 @@
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
-    "chrome-aws-lambda": "^6",
-    "puppeteer-core": "^6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -48,7 +43,6 @@
     "prisma": "^4.11.0",
     "rimraf": "^4.4.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "puppeteer": "^16.2.0"
+    "typescript": "^4.9.5"
   }
 }
